# miriam

./: CMakeCache.txt
docker-gazebo/: Dockerfile(original)  Dockerfile_gazebo  requirements.txt
multi_robot_action_move/: CMakeLists.txt  package.xml  readme.md
multi_robot_action_move/launch/: gazebo_multiplanner_goal_pub.launch  multi_global_planner_server_goal_pub.launch  stage_multiplanner_goal_pub.launch  turtlesim_multiplanner_goal_pub.launch
multi_robot_action_move/msg/: Path_array_agents_id.msg  agent_paths_id.msg  rob_id.msg  robo_goal.msg  robot_pose.msg  robot_pose_array.msg
multi_robot_action_move/scripts/: job_publisher_rob_id.py  job_publisher_stage.py  multi_global_planner_agentpos_pub.py  multi_global_planner_client_goal_pub.py  multi_global_planner_server_goal_pub.py  rob_id_pub.py  robot_id_pub.py  robots_pos_publish.py
multi_robot_action_move/srv/: multiplannergreedy.srv
planner/astar/: astar_grid48con.py
planner/eval/: eval_comparison_test.py  eval_scenarios.py  o.pkl  sample.pkl
planner/greedy/: try_plan.py
planner/tcbs/: plan.py
real_robot_controller/: CMakeLists.txt  multiglobalplannerfinal.xml  package.xml  readme.md
real_robot_controller/include/real_robot_controller/: multi_global_planner_final.h
real_robot_controller/launch/: gazebo_multiplanner.launch  multi_global_planner_server.launch  stage_multiplanner.launch  turtlesim_multiplanner.launch  turtlesim_multiplanner.launch~
real_robot_controller/msg/: Job.msg  Path_array_agentjob.msg  Plan.msg  agent_job.msg  agent_paths.msg
real_robot_controller/scripts/: demo.py  goal_publish.py  job_publisher.py  job_publisher_1.py  job_publisher_rob_id.py  job_publisher_stage.py  multi_global_planner_agentpos_pub.py  multi_global_planner_client.py  multi_global_planner_server.py  robot_id_pub.py  world_multiplanner.pkl
real_robot_controller/srcipts/: demo.py  goal_publish.py  job_publisher.py  job_publisher_1.py  job_publisher_stage.py  multi_global_planner_agentpos_pub.py  multi_global_planner_client.py  multi_global_planner_final.cpp~  multi_global_planner_server.py  rob_id_pub.py
real_robot_controller/srv/: multiplannerjobserver.srv
sim_stage/: cave.yaml  cave_changed.yaml  robomir.world
turtlesim_nav/: CMakeLists.txt  package.xml
turtlesim_nav/config/: base_local_planner_params.yaml  costmap_common_params_stage.yaml  (+3 more)
(+22 files in other folders)
